--- a/slides.Rmd
+++ b/slides.Rmd
@@ -118,7 +118,6 @@ La documentation `utilitR` vise à répondre à deux questions :
 - Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème ;
 - Comment réaliser efficacement des tâches élémentaires avec `R`.
 
-Les recommandations sont adaptées au contexte de travail des agents du service statistique public.
 
 --
 
@@ -126,23 +125,18 @@ Les recommandations sont adaptées au contexte de travail des agents du service 
 Trois caractéristiques importantes :
 ]
 
+- Cette documentation est principalement destinée aux agents du Service statistique public (mais pas exclusivement). Les recommandations sont donc adaptées au contexte de travail des agents du service statistique public ;
 - Cette documentation est issue de la mise en commun des connaissances des agents du SSP sur `R` dans une approche collaborative, sur le modèle de Wikipedia ;
-- Cette documentation ne prétend pas être exhaustive ou sans erreurs ;
-- Cette documentation n'est pas une introduction théorique au langage `R`, mais un aide-mémoire pour le statisticien. Elle ne se substitue donc pas à l'offre de formation existante sur `R`, mais la complète.
+- Cette documentation n'est pas une introduction théorique au langage `R`, mais un guide pratique pour le statisticien. Elle ne se substitue donc pas à l'offre de formation existante sur `R`, mais la complète.
 
----
-# Contenu de la documentation
-
-La documentation est structurée en fiches regroupées en deux parties :
-
-<!-- 1. Travailler avec `R` à l'Insee : -->
+<!-- 1. Travailler avec `R` à l'Insee ; -->
 <!--     + Présentation des espaces de travail informatiques (AUSv3 et SSP Cloud) ; -->
 <!--     + Comment configurer sa session `R` ; -->
 <!--     + Comment installer et utiliser des _packages_ `R` ; -->
 <!--     + Comment utiliser RStudio et les `RProject` ; -->
 <!--     + Comment configurer et utiliser `git` et Gitlab avec RStudio ; -->
 <!--     + Comment choisir un _package_ -->
-<!-- 2. Réaliser des tâches élémentaires avec `R` :  -->
+<!-- 2. Réaliser des tâches élémentaires avec `R` : -->
 <!--     + Importer des données (SAS, csv, txt, odt, xlsx...) ; -->
 <!--     + Manipuler des données (table des données, données textuelles, données spatiales) ; -->
 <!--     + Utiliser des bases de données PostgreSQL et Oracle ; -->
@@ -202,6 +196,12 @@ La documentation est structurée en fiches regroupées en deux parties :
 </tbody>
 </table>
 ]
+
+---
+# Plan de la documentation
+## Première partie : comment (bien) travailler avec `R`
+
+__METTRE ICI DES ELEMENTS SUR LES TUTORIELS__
 
 ---
 # Plan de la documentation
@@ -275,13 +275,15 @@ Les fiches de la documentation ont un certain nombre de caractéristiques commun
 
 .sauterligne[
 
-- Les fiches commencent systématiquement par des **recommandations** précises sur les outils et les _packages_ à utiliser ou à éviter. 
+- Les fiches commencent systématiquement par des **recommandations** sur les outils et les _packages_ à utiliser ou à éviter. 
+- Elles indiquent dans quelles situations et sous quelles conditions un _package_ doit être utilisé.
 - Ces recommandations sont cohérentes avec celles du COPS (Comité de certification des _packages_ `R`).
 ]
 
 --
 
-.sauterligne2[
+.sauterligne[
+Voici les recommandations de la fiche "Importer des fichiers plats":
 .small90[
 .indent[
 .recommandation[
@@ -297,11 +299,7 @@ Les fiches de la documentation ont un certain nombre de caractéristiques commun
 # Contenu de la documentation
 ## Une présentation détaillée des outils recommandés
 
-Les fiches présentent en détail les outils et les _packages_ les plus adaptés pour réaliser la tâche considérée : 
-
-- cas d'usage précis
-- utilisation des fonctions, et de leurs options.
-
+Les fiches présentent en détail les outils et les _packages_ recommandés. 
 --
 
 .sauterligne[
@@ -325,25 +323,32 @@ Les principales options de `fread()` sont les suivantes :
 
 ---
 # Contenu de la documentation
-## Des exemples de code reproductibles et proches des cas d'usage
+## Des exemples reproductibles et proches des cas d'usage
 
 La documentation comporte de nombreux exemples. Ces exemples ont trois particularités :
 
-- Les agents peuvent reproduire presque tous les exemples de la documentation sur leur poste (ou dans AUSv3 ou sur le SSP) en recopiant le code des exemples ;
-- les exemples utilisent des données disponibles sur [insee.fr](www.insee.fr) (code officiel géographique, base permanente des équipements, répertoire Filosofi) ;
-- les données utilisées dans les exemples sont mises à disposition sous forme du _package_ `doremifasolData` développé par Pierre Lamarche et Pierre-Yves Berrard.
+- Les exemples sont **reproductibles** : les agents peuvent reproduire la plupart des exemples de la documentation en en exécutant le code ;
+- Les exemples sont **proches des cas d'usages de `R` dans le SSP** : les jeux de données utilisés dans les exemples sont issus de données disponibles sur [insee.fr](www.insee.fr) (code officiel géographique, base permanente des équipements, répertoire Filosofi) ;
+- Les jeux d'exemple sont **disponibles dans tous les environnements de travail**. Ils sont mis à disposition dans le _package_ `doremifasolData` développé par Pierre Lamarche et Pierre-Yves Berrard.
 
 ---
 # Contenu de la documentation
-## Des exemples de code reproductibles et proches des cas d'usage
+## Des exemples reproductibles et proches des cas d'usage
 
+```{r, echo = FALSE}
+# On augmente le nombre de lignes imprimées pour faire apparaître deux catégories
+options(tibble.print_min = 6)
+options(tibble.print_max = 6)
+options(dplyr.print_min  = 6)
+options(dplyr.print_max  = 6)
+```
 
-```{r, echo = TRUE, warning = FALSE, message = FALSE}
+```{r, echo = TRUE, warning = FALSE, message = FALSE,}
 library(doremifasolData)
 library(magrittr)
 library(dplyr)
 
-nombre <- bpe_ens_2018 %>%
+nombre <- doremifasolData::bpe_ens_2018 %>%
   as_tibble() %>%
   filter(TYPEQU == "B316") %>% 
   group_by(DEP) %>% 
@@ -351,9 +356,6 @@ nombre <- bpe_ens_2018 %>%
 nombre
 ```
 
-
-
-**exemples de code reproductibles et proches des cas d'usage**. 
 
 
 
