--- a/slides.Rmd
+++ b/slides.Rmd
@@ -460,7 +460,7 @@ Questions :
 --
 
 * Organisation sans hiérarchie :
-    * Un _groupe de contributeurs_ (environ 15), parmi lesquels deux coordinateurs (Lino Galiana et Olivier Meslin) ;
+    * Un _groupe de contributeurs_ (environ 20), parmi lesquels deux coordinateurs (Lino Galiana et Olivier Meslin) ;
     * Un _comité de parrainage_ composé de managers : Benoît Rouppert, Arnaud Degorre, Patrick Sillard, Sébastien Roux.
 --
 * La marche à suivre pour contribuer est détaillée dans le [guide de contribution](https://github.com/InseeFrLab/utilitR/blob/master/CONTRIBUTING.md).
@@ -485,7 +485,6 @@ Le projet `utilitR` utilise des méthodes d'intégration continue à l'état de 
 knitr::include_graphics("./resources/githubCI.png")
 ```
 ---
-
 # Où en est le projet aujourd'hui ?
 
 * Un portail d'accès sous forme de site *web* :
@@ -498,6 +497,23 @@ knitr::include_graphics("./resources/githubCI.png")
     + Mars 2021 : finalisation des contenus ;
     + Avril 2021 : finalisation de la mise en forme ;
     + Juin 2021 : diffusion de la V1 de la brochure pdf.
+
+---
+# Remerciements
+
+<!-- Le projet `utilitR` est un projet collaboratif qui a bénéficié des contributions de :  -->
+<!-- r paste0(paste(format(Filter(function(x) !("cph" %in% x$role), desc::desc_get_authors()), include = c("given", "family")), collapse = ", "), ".") -->
+
+.auteurs[
+La coordination est assurée par Lino Galiana et Olivier Meslin.
+
+Le logo du projet a été réalisé par Anna Schlaifer.
+
+Les contributeurs remercient Julien Taquet et Marc Hufschmitt pour leur
+aide précieuse sur la mise en forme du site et de la brochure.
+
+Les contributeurs remercient Arnaud Degorre, Benoît Rouppert, Patrick Sillard et Sébastien Roux pour leur soutien.
+]
 
 ---
 background-image: url('resources/logo-utilitr.png')
