--- a/slides.Rmd
+++ b/slides.Rmd
@@ -441,7 +441,7 @@ Questions :
 --
 
 - La documentation est adaptée à l’environnement informatique du statisticien :
-  + Description des environnements de travail (AUSv3 et SSP Cloud] ;
+  + Description des environnements de travail (AUSv3 et SSP Cloud) ;
   + Présentation des outils assurant la qualité des programmes en `R` comme les `Rprojects` et le contrôle de version avec `git` et Gitlab.
 
 --
